--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "utf-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Passion+One:wght@400;700;900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sriracha&display=swap');
+
+:root {
+    --fonte1:verdana,geneva,tahoma,sans-serif;
+    --fonte2: "Roboto", sans-serif;
+    --fonte3:'Sriracha,cursive';
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html,body {
     background-color: rgb(255, 255, 255);
     min-height: 100vh;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -16,9 +27,11 @@ header {
     text-align: center;
 }
 
-header >h1 {
+header > h1 {
     padding: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 10vw;
 
 }
 
@@ -41,6 +54,7 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
 }
 
 section.normal {
