--- a/estilo/style.css
+++ b/estilo/style.css
@@ -55,6 +55,11 @@ section {
     line-height: 2em;
     padding-left: 30px;
     font-family: var(--fonte3);
+    font-size: 3vw;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -66,13 +71,31 @@ section.normal {
 section.imagem {
     background-color: hsl(0, 0%, 6%);
     color: white;
+    box-shadow: inset 6px 6px 13px 0px black;
+    background-size: cover;
+    background-attachment: fixed;
+
+
 
 }
 section.imagem > p {
-    width: 400px;
+    display: inline-block;
+    padding: 5px;
     background-color: black;
+    text-shadow: 5px 5px 5px black;
 
 }
+section#img01 {
+background-image: url(../imagens/background001.jpg);
+background-position: right center;
+
+
+}
+
+section#img02 {
+background-image: url(../imagens/background002.jpg);
+}
+
 
 footer {
     background-color: black;
